--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,9 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android-extensions'//扩展插件
+
+apply plugin: 'kotlin-kapt'// kapt 编译器插件支持注解处理器,你可以在 Kotlin 项目中使用像 Dagger 或者 Data Binding 这样的库。
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -24,8 +26,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation rootProject.ext.supportLibs
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakcanary"
 
     implementation rootProject.ext.unitTest
 }
