--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ apply from: "dependence.gradle"
 
 buildscript {
     ext.kotlin_version = '1.2.31'
+    ext.tinker_version = '1.9.1'
     repositories {
         google()
         jcenter()
@@ -10,6 +11,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.tencent.tinker:tinker-patch-gradle-plugin:$tinker_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
