--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,6 +107,12 @@ dependencies {
     implementation rootProject.ext.rxJavaLibs
     //运行时权限
     implementation "me.weyye.hipermission:library:${rootProject.ext.permission}"
+    // 底部菜单
+    implementation('com.flyco.tablayout:FlycoTabLayout_Lib:2.1.0@aar') {
+        exclude group: 'com.android.support', module: 'support-v4'
+    }
+    //模糊透明 View
+    implementation "com.github.mmin18:realtimeblurview:${rootProject.ext.realtimeblurview}"
 
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakcanary"
 
