--- a/dependence.gradle
+++ b/dependence.gradle
@@ -15,7 +15,9 @@ ext {
     ]
 
     supportDeps = [
+            supportv4               : "com.android.support:support-v4:$dependVersion.androidSupportSdkVersion",
             appcompatv7: "com.android.support:appcompat-v7:$dependVersion.androidSupportSdkVersion",
+            design                  : "com.android.support:design:$dependVersion.androidSupportSdkVersion",
             cardView   : "com.android.support:cardview-v7:$dependVersion.androidSupportSdkVersion"
     ]
 
@@ -44,6 +46,7 @@ ext {
     multiDex = "1.0.1"
     permission = "1.0.7"
     realtimeblurview = "1.1.0"
+    smartrefresh = "1.0.3"
 
 
 
