--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,14 @@ dependencies {
     //Banner
     implementation "cn.bingoogolapple:bga-banner:${rootProject.ext.banner}@aar"
 
+    //glide
+    implementation ("com.github.bumptech.glide:glide:4.6.1@aar") {
+        transitive = true
+    }
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
+    //如果你在 Kotlin 编写的类里使用 Glide 注解，你需要引入一个 kapt 依赖，以代替常规的 annotationProcessor 依赖
+    kapt 'com.github.bumptech.glide:compiler:4.6.1'
+
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakcanary"
 
 }
