--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,6 +129,8 @@ dependencies {
     implementation "com.github.bumptech.glide:okhttp3-integration:4.6.1"
     //如果你在 Kotlin 编写的类里使用 Glide 注解，你需要引入一个 kapt 依赖，以代替常规的 annotationProcessor 依赖
     kapt 'com.github.bumptech.glide:compiler:4.6.1'
+    //bugly
+    compile 'com.tencent.bugly:crashreport:latest.release'
 
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakcanary"
 
