--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar.FullScreen">
+        android:theme="@style/AppTheme.NoActionBar">
 
 
         <activity
@@ -35,17 +35,17 @@
         <meta-data android:name="BUGLY_APPID"
             android:value="bb315ff392"/>
         <!-- 配置APP版本号 -->
-        <meta-data
+   <!--     <meta-data
             android:name="BUGLY_APP_VERSION"
             android:value="<APP_Version>" />
-        <!-- 配置APP渠道号 -->
+        &lt;!&ndash; 配置APP渠道号 &ndash;&gt;
         <meta-data
             android:name="BUGLY_APP_CHANNEL"
             android:value="<APP_Channel>" />
-        <!-- 配置Bugly调试模式（true或者false）-->
+        &lt;!&ndash; 配置Bugly调试模式（true或者false）&ndash;&gt;
         <meta-data
             android:name="BUGLY_ENABLE_DEBUG"
-            android:value="<isDebug>" />
+            android:value="<isDebug>" />-->
     </application>
 
 </manifest>
