--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,7 +143,7 @@ dependencies {
     compile 'com.tencent.bugly:crashreport:latest.release'
 
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$rootProject.ext.leakcanary"
-
+    compile 'de.hdodenhof:circleimageview:1.3.0'
 }
 ext {
     //for some reason, you may want to ignore tinkerBuild, such as instant run debug build?
