--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:name=".ui.activity.MainActivity"
 
             />
+        <activity android:name=".ui.activity.VideoDetailActivity" />
 
         <!-- 配置APP ID -->
         <meta-data android:name="BUGLY_APPID"
