--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,10 @@ android {
 //            outputFileName = "koteye_v${variant.versionName}_${variant.name}.apk"
 //        }
 //    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
