--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".ui.activity.VideoDetailActivity" />
         <activity android:name=".ui.activity.CategoryDetailActivity" />
         <activity android:name=".lab.Lab" />
+        <activity android:name=".ui.activity.EyeHistoryActivity" />
 
         <!-- 配置APP ID -->
         <meta-data android:name="BUGLY_APPID"
